Vertex worker: fix Python>=3.11 + pin HF deps for SAM-Audio

--- a/infrastructure/vertex/sam-audio-worker/requirements.txt
+++ b/infrastructure/vertex/sam-audio-worker/requirements.txt
@@ -4,10 +4,17 @@ pydantic==2.10.4
 requests==2.32.3
 
 # ML deps
+# Keep numpy < 2 for widest binary compatibility
+numpy==1.26.4
+# Some SAM-Audio deps require protobuf < 3.20
+protobuf>=3.9.2,<3.20
+
 torch
 torchaudio
-transformers
-huggingface-hub
+
+# transformers 4.57.x requires huggingface-hub < 1.0
+transformers==4.57.3
+huggingface-hub>=0.34.0,<1.0
 git+https://github.com/facebookresearch/sam-audio.git
 
 
